--- a/frontend/src/Components/PriceReductionFrom/PriceReductionForm.module.css
+++ b/frontend/src/Components/PriceReductionFrom/PriceReductionForm.module.css
@@ -1,6 +1,7 @@
 .price-reduction-container{
-    border-top: 1px solid lightgray;
+    border: 1px solid lightgray;
     grid-column: 2 / span 2; 
+    padding: 10px;
 }
 
 .price-reduction-container div{
